accidentally deleted some progress on this but think it's okay now

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -18,7 +18,7 @@ author = {Angrist and Jorn-Steffen Pischke},
 year = {2009},
 edition = {1},
 publisher = {Princeton University Press},
-abstract = {The core methods in today's econometric toolkit are linear regression for statistical control, instrumental variables methods for the analysis of natural experiments, and differences-in-differences methods that exploit policy changes. In the modern experimentalist paradigm, these techniques address clear causal questions such as: Do smaller classes increase learning? Should wife batterers be arrested? How much does education raise wages? Mostly Harmless Econometrics shows how the basic tools of applied econometrics allow the data to speak. In addition to econometric essentials, Mostly Harmless Econometrics covers important new extensions--regression-discontinuity designs and quantile regression--as well as how to get standard errors right. Joshua Angrist and Jörn-Steffen Pischke explain why fancier econometric techniques are typically unnecessary and even dangerous. The applied econometric methods emphasized in this book are easy to use and relevant for many areas of contemporary social science. An irreverent review of econometric essentials A focus on tools that applied researchers use most Chapters on regression-discontinuity designs, quantile regression, and standard errors Many empirical examples A clear and concise resource with wide applications},
+abstract = {The core methods in today's econometric toolkit are linear regression for statistical control, instrumental variables methods for the analysis of natural experiments, and differences-in-differences methods that exploit policy changes. In the modern experimentalist paradigm, these techniques address clear causal questions such as: Do smaller classes increase learning? Should wife batterers be arrested? How much does education raise wages? Mostly Harmless Econometrics shows how the basic tools of applied econometrics allow the data to speak. In addition to econometric essentials, Mostly Harmless Econometrics covers important new extensions--regression-discontinuity designs and quantile regression--as well as how to get standard errors right. Joshua Angrist and J?rn-Steffen Pischke explain why fancier econometric techniques are typically unnecessary and even dangerous. The applied econometric methods emphasized in this book are easy to use and relevant for many areas of contemporary social science. An irreverent review of econometric essentials A focus on tools that applied researchers use most Chapters on regression-discontinuity designs, quantile regression, and standard errors Many empirical examples A clear and concise resource with wide applications},
 keywords = {economics; toolkit; econometric; linear; regression; statistics; variables; methods; analysis; natural; experiment; differences; policy; technique; tools; data; discontinuity; quantile; standard; error; social; science; research; design; resource},
 url = {https://EconPapers.repec.org/RePEc:pup:pbooks:8769}
 }
@@ -34,7 +34,7 @@ keywords = {Treatment effects, instrumental variable, specification test, bootst
 doi = {10.3982/ECTA11974},
 url = {https://onlinelibrary.wiley.com/doi/abs/10.3982/ECTA11974},
 eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.3982/ECTA11974},
-abstract = {This paper develops a specification test for instrument validity in the heterogeneous treatment effect model with a binary treatment and a discrete instrument. The strongest testable implication for instrument validity is given by the condition for nonnegativity of point-identifiable compliers' outcome densities. Our specification test infers this testable implication using a variance-weighted Kolmogorov–Smirnov test statistic. The test can be applied to both discrete and continuous outcome cases, and an extension of the test to settings with conditioning covariates is provided.},
+abstract = {This paper develops a specification test for instrument validity in the heterogeneous treatment effect model with a binary treatment and a discrete instrument. The strongest testable implication for instrument validity is given by the condition for nonnegativity of point-identifiable compliers' outcome densities. Our specification test infers this testable implication using a variance-weighted Kolmogorov?Smirnov test statistic. The test can be applied to both discrete and continuous outcome cases, and an extension of the test to settings with conditioning covariates is provided.},
 year = {2015}
 }
 
@@ -45,7 +45,7 @@ year = {2015}
 
 
 @article{RESTAT,
-author = {Mourifié, Ismael and Wan, Yuanyuan},
+author = {Mourifie, Ismael and Wan, Yuanyuan},
 title = {Testing Local Average Treatment Effect Assumptions},
 journal = {The Review of Economics and Statistics},
 volume = {99},
@@ -175,5 +175,4 @@ Month = {October},
 Pages = {2121-68},
 DOI = {10.1257/aer.103.6.2121},
 URL = {http://www.aeaweb.org/articles?id=10.1257/aer.103.6.2121}}
-
 
