--- a/bibliography.bib
+++ b/bibliography.bib
@@ -176,3 +176,5 @@ Pages = {2121-68},
 DOI = {10.1257/aer.103.6.2121},
 URL = {http://www.aeaweb.org/articles?id=10.1257/aer.103.6.2121}}
 
+@misc{kaggle, title={Your Home for Data Science}, url={https://www.kaggle.com/}, journal={Kaggle}}
+
