--- a/essay.Rmd
+++ b/essay.Rmd
@@ -1153,7 +1153,161 @@ simulations_size %>%
 
 #### Romano-Wolf
 
-Romano-Wolf stuff here.
+It's difficult to implement Romano and Wolf's resampling multiple adjustment procedure with one-sided tests in R - instead I demonstrate that the procedure is too conservative when considering data generated under a two-sided null hypothesis. With 1000 draws of the data we'd expect to observe approximately 5\% of test statistics to be greater than the _original_ critical value - however it's clear that 
+
+```{r}
+library(StepwiseTest)
+library(modelr)
+library(furrr)
+positive_sim_data <- create_fake_data(N = 1000,
+                 model_betas = rep(0, 10),
+                 force_positive = TRUE)
+
+positive_sim_model <- positive_sim_data %>%
+  select_at(vars(-contains(":"), -`(Intercept)`)) %>% 
+  run_first_stage_interactions_fast(.,
+                                    "D",
+                                    "Z")
+
+anon_function <- function(dummy_arg, data){
+  data %>% 
+    select_at(vars(-contains(":"),
+                   -"(Intercept)")) %>% 
+    resample_bootstrap() %>% 
+    as.data.frame() %>% 
+    run_first_stage_interactions_fast(.,
+                                      "D",
+                                      "Z") %>% 
+    select(t_stat) %>% 
+    pull()
+}
+plan(multisession)
+model_boot <- 1:500 %>% 
+  future_map_dfc(.,
+                 anon_function,
+                 data = positive_sim_data,
+                 .progress = TRUE,
+                 .options = future_options(
+                   globals = c("positive_sim_data",
+                               "run_first_stage_interactions_fast",
+                               "find_SEs"),
+                   packages = c("dplyr",
+                                "modelr",
+                                "margins")
+                 )) %>% 
+  as.matrix()
+plan(sequential)
+adjusted_val <- FWERkControl(test_stat = positive_sim_model$t_stat,
+                             boot_stat = model_boot,
+                             k = 1,
+                             alpha = 0.05)
+
+
+
+
+
+sim_first_stage_forest <- function(dataset){
+  forest_sim <- dataset %>% 
+    select_at(vars(contains("V"), -contains(":"))) %>% 
+    as.matrix() %>% 
+    causal_forest(X = .,
+                  Y = dataset$D,
+                  W = dataset$Z,
+                  num.trees = 4000) %>% 
+    predict(., estimate.variance = TRUE) %>% 
+    as_tibble() %>% 
+    mutate(sigma_hat = sqrt(variance.estimates),
+           prediction_lo = predictions - 1.96*sigma_hat,
+           prediction_hi = predictions + 1.96*sigma_hat,
+           t_stat = predictions / sigma_hat,
+           pval_one_neg = pnorm(t_stat),
+           pval_one_pos = pnorm(-t_stat),
+           row_id = row_number())
+  return(forest_sim)
+}
+
+positive_sim_model_rf <- sim_first_stage_forest(positive_sim_data)
+
+
+anon_function_rf <- function(dummy_arg,
+                             data){
+    data %>% 
+    resample_bootstrap() %>% 
+    as.data.frame() %>% 
+    sim_first_stage_forest(.) %>% 
+    select(t_stat) %>% 
+    pull()
+}
+run_sim <- TRUE
+if (run_sim){
+  plan(multisession)
+  model_boot_rf <- 1:500 %>% 
+    future_map_dfc(.,
+                   anon_function_rf,
+                   data = positive_sim_data,
+                   .progress = TRUE,
+                   .options = future_options(
+                     globals = c("positive_sim_data",
+                                 "sim_first_stage_forest"),
+                     packages = c("dplyr",
+                                  "modelr",
+                                  "grf")
+                   )) %>% 
+    as.matrix()
+  
+  
+  plan(sequential)
+  write.csv("C:/Users/edjee/Dropbox/Ed/romano_wolf_rf.csv",
+            row.names = FALSE)
+} else {
+  model_boot_rf <- readr::read_csv("C:/Users/edjee/Dropbox/Ed/romano_wolf_rf.csv")
+}
+
+adjusted_val_rf <- FWERkControl(test_stat = positive_sim_model_rf$t_stat,
+                             boot_stat = model_boot_rf,
+                             k = 1,
+                             alpha = 0.05)
+
+
+rf_row <- bind_cols(
+  adjusted_val_rf$CV %>% 
+    enframe() %>% 
+    select("Adjusted Critical Value" = value),
+  positive_sim_model_rf %>% 
+    summarise("Original Critical Value" = qt(0.95, df = nrow(positive_sim_data) - 10),
+              "Max Test Statistic" = max(t_stat),
+              "Proportion Significant" = sum(ifelse(t_stat > 1.65, 1, 0))/nrow(positive_sim_data),
+              "Test" = "Causal Forest")
+)
+
+sfs_row <- bind_cols(
+  adjusted_val$CV %>% 
+    enframe() %>% 
+    select("Adjusted Critical Value" = value),
+  positive_sim_model %>% 
+  summarise("Original Critical Value" = qt(0.95, df = nrow(positive_sim_data) - 10),
+            "Max Test Statistic" = max(t_stat),
+            "Proportion Significant" = sum(ifelse(t_stat > 1.65, 1, 0))/nrow(positive_sim_data),
+            "Test" = "Saturated First Stage"))
+
+
+bind_rows(sfs_row,
+          rf_row) %>% 
+  gt() %>% 
+  fmt_number(columns = c("Adjusted Critical Value",
+                         "Original Critical Value",
+                         "Max Test Statistic"),
+             decimals = 2) %>% 
+  fmt_percent(
+    col
+  )
+    tab_header(
+    title = "Romano-Wolf Adjustment"
+  ) 
+
+
+
+```
 
 
 
